--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,24 @@ lw5/css/style.css
 lw5/index.html
 lw5/js/time-tracker.js
 lw5/music/click.mp3
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
