--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "gulp build",
     "client": "gulp dev",
     "server": "nodemon server.js"
   },
@@ -13,6 +14,26 @@
     "browser-sync": "^2.23.7",
     "gulp": "^3.9.1",
     "nodemon": "^1.17.3",
-    "websocket": "^1.0.25"
+    "websocket": "^1.0.25",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-babel": "^7.0.1",
+    "gulp-imagemin": "^3.4.0",
+    "gulp-inject": "^4.3.0",
+    "gulp-install": "^1.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-remove-html-comments": "^1.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-rigger": "^0.5.8",
+    "gulp-sync": "^0.1.4",
+    "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^4.3.11",
+    "imagemin-pngquant": "^5.0.1",
+    "rimraf": "^2.6.2"
+  },
+  "bugs": {
+    "url": "https://github.com/slanderc/Tracker/issues"
   }
 }
